--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         frameworkUrl: buildUrl + "/WebAR TEST.framework.js.br",
         codeUrl: buildUrl + "/WebAR TEST.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Tedesqui",
         productName: "WebAR Demo",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
