--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WebAR TEST.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebAR TEST.data.br",
-        frameworkUrl: buildUrl + "/WebAR TEST.framework.js.br",
-        codeUrl: buildUrl + "/WebAR TEST.wasm.br",
+        dataUrl: buildUrl + "/WebAR TEST.data",
+        frameworkUrl: buildUrl + "/WebAR TEST.framework.js",
+        codeUrl: buildUrl + "/WebAR TEST.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Tedesqui",
         productName: "WebAR Demo",
