--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/WebAR TEST.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebAR TEST.data.gz",
-        frameworkUrl: buildUrl + "/WebAR TEST.framework.js.gz",
-        codeUrl: buildUrl + "/WebAR TEST.wasm.gz",
+        dataUrl: buildUrl + "/WebAR TEST.data.unityweb",
+        frameworkUrl: buildUrl + "/WebAR TEST.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebAR TEST.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Tedesqui",
         productName: "WebAR Demo",
